--- a/test.conf
+++ b/test.conf
@@ -1,8 +1,8 @@
 # Testfile for conflate configuration manager.
 # Running conflate.py by itself from its home directory will
 # modify this file.
-
-test1 = False # this is a comment 
+test1 = False # this is a comment
 # Comment on its own line
-test2 = {'hat': 2, 'baz': ['hi', 'hi', 'hi'], 'flibber': 8} 
-test3 = 'string'
+test2 = {'hat': 1, 'baz': ['bye', 'bye', 'bye'], 'flibber': 7} 
+test3 = 'string' 
+test4 = False
